--- a/06-interactive-widgets/projects/starter/pubspec.yaml
+++ b/06-interactive-widgets/projects/starter/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  device_preview: ^0.8.0
   flutter:
     sdk: flutter
   google_fonts: ^2.1.0
