--- a/06-interactive-widgets/projects/starter/pubspec.yaml
+++ b/06-interactive-widgets/projects/starter/pubspec.yaml
@@ -11,11 +11,16 @@ dependencies:
   device_preview: ^0.8.0
   flutter:
     sdk: flutter
+  flutter_colorpicker: ^0.6.0
   google_fonts: ^2.1.0
+  intl: ^0.17.0
+  provider: ^5.0.0
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.17.12
 
 flutter:
   uses-material-design: true
