--- a/10-serialization-with-json/projects/starter/pubspec.yaml
+++ b/10-serialization-with-json/projects/starter/pubspec.yaml
@@ -18,12 +18,14 @@ dependencies:
   flutter_svg: ^0.22.0
   shared_preferences: ^2.0.7
   json_annotation: ^4.3.0
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.0.1
   build_runner: ^2.1.5
+  test: ^1.17.12
 
 flutter:
 
