--- a/10-serialization-with-json/projects/starter/pubspec.yaml
+++ b/10-serialization-with-json/projects/starter/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   shared_preferences: ^2.0.7
   json_annotation: ^4.3.0
   http: ^0.13.4
+  chopper: ^4.0.3
+  logging: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +28,7 @@ dev_dependencies:
   json_serializable: ^6.0.1
   build_runner: ^2.1.5
   test: ^1.17.12
+  chopper_generator: ^4.0.3
 
 flutter:
 
