--- a/13-state-management/projects/starter/pubspec.yaml
+++ b/13-state-management/projects/starter/pubspec.yaml
@@ -30,6 +30,7 @@ dev_dependencies:
   build_runner: ^2.1.1
   json_serializable: ^4.1.4
   chopper_generator: ^4.0.1
+  test: ^1.17.12
 
 flutter:
 
