--- a/13-state-management/projects/starter/pubspec.yaml
+++ b/13-state-management/projects/starter/pubspec.yaml
@@ -22,6 +22,11 @@ dependencies:
   logging: ^1.0.1
   provider: ^6.0.1
   equatable: ^2.0.3
+  sqflite: ^2.0.0+4
+  sqlbrite: ^2.2.0
+  moor: ^4.6.1+1
+  sqflite_common_ffi: ^2.1.0
+  #sqlite3: ^1.3.1
 
 dev_dependencies:
   flutter_test:
