--- a/13-state-management/projects/starter/pubspec.yaml
+++ b/13-state-management/projects/starter/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.15.0-116.0.dev <3.0.0"
 
 dependencies:
   flutter:
@@ -24,8 +24,11 @@ dependencies:
   equatable: ^2.0.3
   sqflite: ^2.0.0+4
   sqlbrite: ^2.2.0
-  moor: ^4.6.1+1
+  #moor: ^4.6.1+1
   sqflite_common_ffi: ^2.1.0
+  path_provider: ^2.0.7
+  synchronized: ^3.0.0
+  moor_flutter: ^4.0.0
   #sqlite3: ^1.3.1
 
 dev_dependencies:
@@ -36,6 +39,7 @@ dev_dependencies:
   json_serializable: ^4.1.4
   chopper_generator: ^4.0.1
   test: ^1.17.12
+  moor_generator: ^4.4.1
 
 flutter:
 
