--- a/19-firebase-realtime-database/projects/starter/pubspec.yaml
+++ b/19-firebase-realtime-database/projects/starter/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
 
   cupertino_icons: 1.0.3
   intl: 0.17.0
+  cloud_firestore: ^3.1.1
+  firebase_core: ^1.10.2
+  provider: ^6.0.1
+  firebase_auth: ^3.3.1
 
 dev_dependencies:
   flutter_test:
